邮箱验证服务：邮件发送工具类(libcurl SMTP发送邮件)、定时清理过期验证码 接口：获取验证码、注册(查验验证码)

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -26,5 +26,12 @@
     "log": {
         "level": "info",
         "path": "logs"
+    },
+    "verify_service": {
+        "smtp_server_url": "smtps://smtp.126.com:587",
+        "smtp_user": "h1423443710@126.com",
+        "smtp_password": "RKjDMqAnaAQfEa7k",
+        "verification_code_expiry": 300,
+        "email_from": "h1423443710@126.com"
     }
 }
